в файле docker-compose.yml создал БД PostgreSQL в Docker,далее в файле application.yml прописал конфигурацию для подключения к этой БД

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ mydatabase
-    username: myusername
+    url: jdbc:postgresql://localhost:5432/mydb
+    username: myuser
     password: mypassword
     driver-class-name: org.postgresql.Driver
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
